--- a/ansible/roles/grafana/templates/grafana.ini
+++ b/ansible/roles/grafana/templates/grafana.ini
@@ -10,6 +10,9 @@
 # possible values : production, development
 app_mode = production
 
+# instance name, defaults to HOSTNAME environment variable value or hostname if HOSTNAME var is empty
+instance_name = ${HOSTNAME}
+
 #################################### Paths ####################################
 [paths]
 # Path to where grafana can store temp files, sessions, and the sqlite3 db (if that is used)
@@ -24,7 +27,7 @@ plugins = {{ noc_root }}/var/db/grafana_plugins
 
 #################################### Server ####################################
 [server]
-# Protocol (http or https)
+# Protocol (http, https, socket)
 protocol = http
 
 # The ip address to bind to, empty will bind to all interfaces
@@ -75,6 +78,10 @@ name = {{grafana_pg_db}}
 user = {{grafana_pg_user}}
 password = '{{grafana_pg_password}}'
 
+# Max conn setting default is 0 (mean not set)
+max_idle_conn =
+max_open_conn =
+
 # For "postgres" only, either "disable", "require" or "verify-full"
 ;ssl_mode = disable
 
@@ -91,7 +98,6 @@ provider = postgres
 # memory: not have any config yet
 # file: session dir path, is relative to grafana data_path
 # redis: config like redis server e.g. `addr=127.0.0.1:6379,pool_size=100,db=grafana`
-# mysql: go-sql-driver/mysql dsn config string, e.g. `user:password@tcp(127.0.0.1:3306)/database_name`
 # postgres: user=a password=b host=localhost port=5432 dbname=c sslmode=disable
 ;provider_config = sessions
 provider_config = user={{grafana_pg_user}} password='{{grafana_pg_password}}' host={{ postgres_master }} port={{postgres_listen}} dbname={{grafana_pg_db}} sslmode=disable
@@ -103,7 +109,15 @@ provider_config = user={{grafana_pg_user}} password='{{grafana_pg_password}}' ho
 ;cookie_secure = false
 
 # Session life time, default is 86400
-;session_life_time = 86400
+session_life_time = 86400
+gc_interval_time = 86400
+
+#################################### Data proxy ###########################
+[dataproxy]
+
+# This enables data proxy logging, default is false
+logging = false
+
 
 #################################### Analytics ####################################
 [analytics]
@@ -141,6 +155,17 @@ disable_gravatar = true
 # data source proxy whitelist (ip_or_domain:port seperated by spaces)
 ;data_source_proxy_whitelist =
 
+[snapshots]
+# snapshot sharing options
+external_enabled = false
+external_snapshot_url = https://snapshots-origin.raintank.io
+external_snapshot_name = Publish to snapshot.raintank.io
+
+# remove expired snapshot
+snapshot_remove_expired = true
+
+# remove snapshots after 180 days
+snapshot_TTL_days = 180
 #################################### Users ####################################
 [users]
 # disable user signup / registration
@@ -156,6 +181,22 @@ allow_org_create = false
 
 # Default role new users will be automatically assigned (if disabled above is set to true)
 ;auto_assign_org_role = Viewer
+
+# Require email validation before sign up completes
+verify_email_enabled = false
+
+# Background text for the user field on the login page
+; login_hint =
+
+# Default UI theme ("dark" or "light")
+default_theme = dark
+
+[auth]
+# Set to true to disable (hide) the login form, useful if you use OAuth
+disable_login_form = true
+
+# Set to true to disable the signout link in the side menu. useful if you use auth.proxy
+disable_signout_menu = true
 
 #################################### Anonymous Auth ##########################
 [auth.anonymous]
@@ -185,15 +226,52 @@ org_name = NOC
 
 #################################### Google Auth ##########################
 [auth.google]
-;enabled = false
-;allow_sign_up = false
-;client_id = some_client_id
-;client_secret = some_client_secret
-;scopes = https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email
-;auth_url = https://accounts.google.com/o/oauth2/auth
-;token_url = https://accounts.google.com/o/oauth2/token
-;api_url = https://www.googleapis.com/oauth2/v1/userinfo
-;allowed_domains =
+enabled = false
+allow_sign_up = true
+client_id = some_client_id
+client_secret = some_client_secret
+scopes = https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email
+auth_url = https://accounts.google.com/o/oauth2/auth
+token_url = https://accounts.google.com/o/oauth2/token
+api_url = https://www.googleapis.com/oauth2/v1/userinfo
+allowed_domains =
+hosted_domain =
+
+#################################### Grafana.com Auth ####################
+# legacy key names (so they work in env variables)
+[auth.grafananet]
+enabled = false
+allow_sign_up = true
+client_id = some_id
+client_secret = some_secret
+scopes = user:email
+allowed_organizations =
+
+[auth.grafana_com]
+enabled = false
+allow_sign_up = true
+client_id = some_id
+client_secret = some_secret
+scopes = user:email
+allowed_organizations =
+
+#################################### Generic OAuth #######################
+[auth.generic_oauth]
+name = OAuth
+enabled = false
+allow_sign_up = true
+client_id = some_id
+client_secret = some_secret
+scopes = user:email
+auth_url =
+token_url =
+api_url =
+team_ids =
+allowed_organizations =
+
+#################################### Basic Auth ##########################
+[auth.basic]
+enabled = true
 
 #################################### Auth Proxy ##########################
 [auth.proxy]
@@ -201,29 +279,31 @@ enabled = true
 header_name = Remote-User
 header_property = username
 auto_sign_up = true
+ldap_sync_ttl = 60
+whitelist =
 
-#################################### Basic Auth ##########################
-[auth.basic]
-;enabled = true
-
-#################################### Auth LDAP ##########################
+#################################### Auth LDAP ###########################
 [auth.ldap]
-;enabled = false
-;config_file = /etc/grafana/ldap.toml
+enabled = false
+config_file = /etc/grafana/ldap.toml
+allow_sign_up = true
 
-#################################### SMTP / Emailing ##########################
+#################################### SMTP / Emailing #####################
 [smtp]
-;enabled = false
-;host = localhost:25
-;user =
-;password =
-;cert_file =
-;key_file =
-;skip_verify = false
-;from_address = admin@grafana.localhost
+enabled = false
+host = localhost:25
+user =
+# If the password contains # or ; you have to wrap it with trippel quotes. Ex """#password;"""
+password =
+cert_file =
+key_file =
+skip_verify = false
+from_address = admin@grafana.localhost
+from_name = Grafana
 
 [emails]
-;welcome_email_on_sign_up = false
+welcome_email_on_sign_up = false
+templates_pattern = emails/*.html
 
 #################################### Logging ##########################
 [log]
@@ -265,10 +345,11 @@ auto_sign_up = true
 ;rabbitmq_url = amqp://localhost/
 ;exchange = grafana_events
 
-;#################################### Dashboard JSON files ##########################
+#################################### Dashboard JSON files ################
 [dashboards.json]
-;enabled = false
+enabled = true
 ;path = /var/lib/grafana/dashboards
+path = {{ noc_root }}/var/db/grafana_dashboards
 
 #################################### Alerting ######################################
 [alerting]
