move logs to /var/log/noc
--HG--
branch : feature/microservices

--- a/etc/defaults/services/syslogcollector.conf
+++ b/etc/defaults/services/syslogcollector.conf
@@ -37,7 +37,7 @@ user = root
 # redirect proc stderr to stdout (default false)
 redirect_stderr = true
 # stdout log path, NONE for none# default AUTO
-stdout_logfile = var/log/%(program_name)s.log
+stdout_logfile = /var/log/noc/%(program_name)s.log
 # max # logfile bytes b4 rotation (default 50MB)
 stdout_logfile_maxbytes = 10MB
 # # of stdout logfile backups (default 10)
@@ -47,7 +47,7 @@ stdout_logfile_backups = 3
 # emit events on stdout writes (default false)
 stdout_events_enabled = false
 # stderr log path, NONE for none# default AUTO
-stderr_logfile = var/log/%(program_name)s.err
+stderr_logfile = /var/log/noc/%(program_name)s.err
 # max # logfile bytes b4 rotation (default 50MB)
 stderr_logfile_maxbytes = 1MB
 # # of stderr logfile backups (default 10)
