refactor nsq* roles to use playbook wide vars
--HG--
branch : feature/microservices

--- a/ansible/roles/nsqadmin/templates/etc/systemd/nsqadmin.service
+++ b/ansible/roles/nsqadmin/templates/etc/systemd/nsqadmin.service
@@ -3,7 +3,7 @@ Description=Admin interface Realtime distributed messaging (nsddmin)
 After=network.target
 
 [Service]
-ExecStart={{noc_root}}/bin/nsqadmin -config {{noc_root}}/var/etc/nsq/nsqadmin.conf
+ExecStart={{noc_root}}/bin/nsqadmin -config {{nsqd_config_dir}}/nsqadmin.conf
 Restart=always
 User=nsq
 Group=nsq
