--- a/ansible/roles/nsqd/templates/etc/systemd/nsqd.service
+++ b/ansible/roles/nsqd/templates/etc/systemd/nsqd.service
@@ -3,7 +3,7 @@ Description=Realtime distributed messaging (nsqd)
 After=network.target
 
 [Service]
-ExecStart={{noc_root}}/bin/nsqd -config {{noc_root}}/var/etc/nsq/nsqd.conf
+ExecStart={{noc_root}}/bin/nsqd -config {{nsqd_config_dir}}/nsqd.conf
 Restart=always
 User=nsq
 Group=nsq
