--- a/ansible/roles/nsqlookupd/templates/etc/systemd/system/nsqlookupd.service
+++ b/ansible/roles/nsqlookupd/templates/etc/systemd/system/nsqlookupd.service
@@ -3,7 +3,7 @@ Description=Realtime distributed messaging (nsqlookupd)
 After=network.target
 
 [Service]
-ExecStart={{noc_root}}/bin/nsqlookupd -config {{noc_root}}/var/etc/nsq/nsqlookupd.conf
+ExecStart={{noc_root}}/bin/nsqlookupd -config {{nsqd_config_dir}}/nsqlookupd.conf
 Restart=always
 User=nsq
 Group=nsq
