--- a/ansible/roles/node/templates/etc/services/login.conf
+++ b/ansible/roles/node/templates/etc/services/login.conf
@@ -1,9 +1,9 @@
 ##
 ## Legacy noc-sae config
 ##
-[program:card]
+[program:login]
 # the program (relative uses PATH, can take args)
-command = ./services/card/service.py --instance=%(process_num)d
+command = ./services/login/service.py --instance=%(process_num)d
 # process_name expr (default %(program_name)s)
 process_name = %(program_name)s-%(process_num)02d
 # number of processes copies to start (def 1)
@@ -13,7 +13,7 @@ numprocs = 1
 # umask for process (default None)
 umask = 022
 # the relative start priority (default 999)
-priority = 300
+priority = 40
 # start at supervisord start
 autostart = false
 # whether/when to restart (default: unexpected)
@@ -37,7 +37,7 @@ user = %(ENV_NOC_USER)s
 # redirect proc stderr to stdout (default false)
 redirect_stderr = true
 # stdout log path, NONE for none# default AUTO
-stdout_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.log
+stdout_logfile = {{noc_logs}}/%(program_name)s-%(process_num)02d.log
 # max # logfile bytes b4 rotation (default 50MB)
 stdout_logfile_maxbytes = 10MB
 # # of stdout logfile backups (default 10)
@@ -47,7 +47,7 @@ stdout_logfile_backups = 3
 # emit events on stdout writes (default false)
 stdout_events_enabled = false
 # stderr log path, NONE for none# default AUTO
-stderr_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.err
+stderr_logfile = {{noc_logs}}/%(program_name)s-%(process_num)02d.err
 # max # logfile bytes b4 rotation (default 50MB)
 stderr_logfile_maxbytes = 1MB
 # # of stderr logfile backups (default 10)
