--- a/ansible/roles/node/templates/etc/services/activator.conf
+++ b/ansible/roles/node/templates/etc/services/activator.conf
@@ -1,11 +1,11 @@
 ##
-## Legacy noc-notifier config
+## Legacy noc-activator config
 ##
-[program:notifier]
+[program:activator]
 # the program (relative uses PATH, can take args)
-command = ./scripts/noc-notifier.py
+command = ./services/activator/service.py --instance=%(process_num)d
 # process_name expr (default %(program_name)s)
-process_name = %(program_name)s
+process_name = %(program_name)s-%(process_num)02d
 # number of processes copies to start (def 1)
 numprocs = 1
 # directory to cwd to before exec (def no cwd)
@@ -13,15 +13,15 @@ numprocs = 1
 # umask for process (default None)
 umask = 022
 # the relative start priority (default 999)
-priority = 999
+priority = 100
 # start at supervisord start
 autostart = false
 # whether/when to restart (default: unexpected)
 autorestart = unexpected
 # number of secs prog must stay running (def. 1)
-startsecs = 5
+startsecs = 1
 # max # of serial start failures (default 3)
-startretries = 3
+startretries = 999
 # 'expected' exit codes for process (default 0,2)
 exitcodes = 0
 # signal used to kill process (default TERM)
@@ -37,7 +37,7 @@ user = %(ENV_NOC_USER)s
 # redirect proc stderr to stdout (default false)
 redirect_stderr = true
 # stdout log path, NONE for none# default AUTO
-stdout_logfile = /var/log/noc/%(program_name)s.log
+stdout_logfile = {{noc_logs}}/%(program_name)s-%(process_num)02d.log
 # max # logfile bytes b4 rotation (default 50MB)
 stdout_logfile_maxbytes = 10MB
 # # of stdout logfile backups (default 10)
@@ -47,7 +47,7 @@ stdout_logfile_backups = 3
 # emit events on stdout writes (default false)
 stdout_events_enabled = false
 # stderr log path, NONE for none# default AUTO
-stderr_logfile = /var/log/noc/%(program_name)s.err
+stderr_logfile = {{noc_logs}}/%(program_name)s-%(process_num)02d.err
 # max # logfile bytes b4 rotation (default 50MB)
 stderr_logfile_maxbytes = 1MB
 # # of stderr logfile backups (default 10)
