--- a/ansible/roles/node/templates/etc/services/escalator.conf
+++ b/ansible/roles/node/templates/etc/services/escalator.conf
@@ -1,11 +1,11 @@
 ##
-## Legacy noc-sae config
+## Legacy noc-escalator config
 ##
-[program:login]
+[program:escalator]
 # the program (relative uses PATH, can take args)
-command = ./services/login/service.py --instance=%(process_num)d
+command = ./services/escalator/service.py
 # process_name expr (default %(program_name)s)
-process_name = %(program_name)s-%(process_num)02d
+process_name = %(program_name)s
 # number of processes copies to start (def 1)
 numprocs = 1
 # directory to cwd to before exec (def no cwd)
@@ -13,13 +13,13 @@ numprocs = 1
 # umask for process (default None)
 umask = 022
 # the relative start priority (default 999)
-priority = 40
+priority = 50
 # start at supervisord start
 autostart = false
 # whether/when to restart (default: unexpected)
 autorestart = unexpected
 # number of secs prog must stay running (def. 1)
-startsecs = 1
+startsecs = 5
 # max # of serial start failures (default 3)
 startretries = 999
 # 'expected' exit codes for process (default 0,2)
@@ -37,17 +37,17 @@ user = %(ENV_NOC_USER)s
 # redirect proc stderr to stdout (default false)
 redirect_stderr = true
 # stdout log path, NONE for none# default AUTO
-stdout_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.log
+stdout_logfile = {{noc_logs}}/%(program_name)s.log
 # max # logfile bytes b4 rotation (default 50MB)
 stdout_logfile_maxbytes = 10MB
 # # of stdout logfile backups (default 10)
-stdout_logfile_backups = 3
+stdout_logfile_backups = 10
 # number of bytes in 'capturemode' (default 0)
 #stdout_capture_maxbytes = 1MB
 # emit events on stdout writes (default false)
 stdout_events_enabled = false
 # stderr log path, NONE for none# default AUTO
-stderr_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.err
+stderr_logfile = {{noc_logs}}/%(program_name)s.err
 # max # logfile bytes b4 rotation (default 50MB)
 stderr_logfile_maxbytes = 1MB
 # # of stderr logfile backups (default 10)
@@ -58,5 +58,3 @@ stderr_logfile_backups = 3
 stderr_events_enabled = false
 # process environment additions (def no adds)
 #environment = A = "1",B = "2"
-# override serverurl computation (childutils)
-#serverurl = AUTO
