--- a/ansible/roles/node/templates/etc/services/ping.conf
+++ b/ansible/roles/node/templates/etc/services/ping.conf
@@ -1,9 +1,9 @@
 ##
-## Legacy noc-activator config
+## NOC ping
 ##
-[program:activator]
+[program:ping]
 # the program (relative uses PATH, can take args)
-command = ./services/activator/service.py --instance=%(process_num)d
+command = ./services/ping/service.py --instance=%(process_num)d
 # process_name expr (default %(program_name)s)
 process_name = %(program_name)s-%(process_num)02d
 # number of processes copies to start (def 1)
@@ -13,7 +13,7 @@ numprocs = 1
 # umask for process (default None)
 umask = 022
 # the relative start priority (default 999)
-priority = 100
+priority = 90
 # start at supervisord start
 autostart = false
 # whether/when to restart (default: unexpected)
@@ -27,17 +27,17 @@ exitcodes = 0
 # signal used to kill process (default TERM)
 stopsignal = TERM
 # max num secs to wait b4 SIGKILL (default 10)
-stopwaitsecs = 3
+stopwaitsecs = 2
 # send stop signal to the UNIX process group (default false)
 stopasgroup = false
 # SIGKILL the UNIX process group (def false)
 killasgroup = true
 # setuid to this UNIX account to run the program
-user = %(ENV_NOC_USER)s
+user = root
 # redirect proc stderr to stdout (default false)
 redirect_stderr = true
 # stdout log path, NONE for none# default AUTO
-stdout_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.log
+stdout_logfile = {{noc_logs}}/%(program_name)s-%(process_num)02d.log
 # max # logfile bytes b4 rotation (default 50MB)
 stdout_logfile_maxbytes = 10MB
 # # of stdout logfile backups (default 10)
@@ -47,7 +47,7 @@ stdout_logfile_backups = 3
 # emit events on stdout writes (default false)
 stdout_events_enabled = false
 # stderr log path, NONE for none# default AUTO
-stderr_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.err
+stderr_logfile = {{noc_logs}}/%(program_name)s-%(process_num)02d.err
 # max # logfile bytes b4 rotation (default 50MB)
 stderr_logfile_maxbytes = 1MB
 # # of stderr logfile backups (default 10)
