--- a/ansible/roles/node/templates/etc/services/pmwriter.conf
+++ b/ansible/roles/node/templates/etc/services/pmwriter.conf
@@ -1,9 +1,9 @@
 ##
-## NOC FM event writer
+## NOC PM metrics writer
 ##
-[program:omap]
+[program:pmwriter]
 # the program (relative uses PATH, can take args)
-command = ./services/omap/service.py --instance=%(process_num)d
+command = ./services/pmwriter/service.py --instance=%(process_num)d
 # process_name expr (default %(program_name)s)
 process_name = %(program_name)s-%(process_num)02d
 # number of processes copies to start (def 1)
@@ -27,7 +27,7 @@ exitcodes = 0
 # signal used to kill process (default TERM)
 stopsignal = TERM
 # max num secs to wait b4 SIGKILL (default 10)
-stopwaitsecs = 1
+stopwaitsecs = 3
 # send stop signal to the UNIX process group (default false)
 stopasgroup = false
 # SIGKILL the UNIX process group (def false)
@@ -37,7 +37,7 @@ user = %(ENV_NOC_USER)s
 # redirect proc stderr to stdout (default false)
 redirect_stderr = true
 # stdout log path, NONE for none# default AUTO
-stdout_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.log
+stdout_logfile = {{noc_logs}}/%(program_name)s-%(process_num)02d.log
 # max # logfile bytes b4 rotation (default 50MB)
 stdout_logfile_maxbytes = 10MB
 # # of stdout logfile backups (default 10)
@@ -47,7 +47,7 @@ stdout_logfile_backups = 3
 # emit events on stdout writes (default false)
 stdout_events_enabled = false
 # stderr log path, NONE for none# default AUTO
-stderr_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.err
+stderr_logfile = {{noc_logs}}/%(program_name)s-%(process_num)02d.err
 # max # logfile bytes b4 rotation (default 50MB)
 stderr_logfile_maxbytes = 1MB
 # # of stderr logfile backups (default 10)
