--- a/ansible/roles/node/templates/etc/services/sync.conf
+++ b/ansible/roles/node/templates/etc/services/sync.conf
@@ -1,11 +1,11 @@
 ##
-## Legacy noc-tgsender config
+## Legacy noc-sync config
 ##
-[program:tgsender]
+[program:sync]
 # the program (relative uses PATH, can take args)
-command = ./services/tgsender/service.py --instance=%(process_num)d
+command = ./scripts/noc-sync.py
 # process_name expr (default %(program_name)s)
-process_name = %(program_name)s-%(process_num)02d
+process_name = %(program_name)s
 # number of processes copies to start (def 1)
 numprocs = 1
 # directory to cwd to before exec (def no cwd)
@@ -13,15 +13,15 @@ numprocs = 1
 # umask for process (default None)
 umask = 022
 # the relative start priority (default 999)
-priority = 600
+priority = 100
 # start at supervisord start
 autostart = false
 # whether/when to restart (default: unexpected)
 autorestart = unexpected
 # number of secs prog must stay running (def. 1)
-startsecs = 2
+startsecs = 5
 # max # of serial start failures (default 3)
-startretries = 999
+startretries = 3
 # 'expected' exit codes for process (default 0,2)
 exitcodes = 0
 # signal used to kill process (default TERM)
@@ -37,7 +37,7 @@ user = %(ENV_NOC_USER)s
 # redirect proc stderr to stdout (default false)
 redirect_stderr = true
 # stdout log path, NONE for none# default AUTO
-stdout_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.log
+stdout_logfile = {{noc_logs}}/%(program_name)s.log
 # max # logfile bytes b4 rotation (default 50MB)
 stdout_logfile_maxbytes = 10MB
 # # of stdout logfile backups (default 10)
@@ -47,13 +47,13 @@ stdout_logfile_backups = 3
 # emit events on stdout writes (default false)
 stdout_events_enabled = false
 # stderr log path, NONE for none# default AUTO
-stderr_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.err
+stderr_logfile = {{noc_logs}}/%(program_name)s.err
 # max # logfile bytes b4 rotation (default 50MB)
 stderr_logfile_maxbytes = 1MB
 # # of stderr logfile backups (default 10)
 stderr_logfile_backups = 3
 # number of bytes in 'capturemode' (default 0)
-stderr_capture_maxbytes = 1MB
+#stderr_capture_maxbytes = 1MB
 # emit events on stderr writes (default false)
 stderr_events_enabled = false
 # process environment additions (def no adds)
