--- a/ansible/roles/node/templates/etc/services/syslogcollector.conf
+++ b/ansible/roles/node/templates/etc/services/syslogcollector.conf
@@ -1,9 +1,9 @@
 ##
-## Legacy noc-sync config
+## NOC FM event writer
 ##
-[program:sync]
+[program:syslogcollector]
 # the program (relative uses PATH, can take args)
-command = ./scripts/noc-sync.py
+command = ./services/syslogcollector/service.py
 # process_name expr (default %(program_name)s)
 process_name = %(program_name)s
 # number of processes copies to start (def 1)
@@ -13,7 +13,7 @@ numprocs = 1
 # umask for process (default None)
 umask = 022
 # the relative start priority (default 999)
-priority = 100
+priority = 200
 # start at supervisord start
 autostart = false
 # whether/when to restart (default: unexpected)
@@ -21,7 +21,7 @@ autorestart = unexpected
 # number of secs prog must stay running (def. 1)
 startsecs = 5
 # max # of serial start failures (default 3)
-startretries = 3
+startretries = 999
 # 'expected' exit codes for process (default 0,2)
 exitcodes = 0
 # signal used to kill process (default TERM)
@@ -33,11 +33,11 @@ stopasgroup = false
 # SIGKILL the UNIX process group (def false)
 killasgroup = true
 # setuid to this UNIX account to run the program
-user = %(ENV_NOC_USER)s
+user = root
 # redirect proc stderr to stdout (default false)
 redirect_stderr = true
 # stdout log path, NONE for none# default AUTO
-stdout_logfile = /var/log/noc/%(program_name)s.log
+stdout_logfile = {{noc_logs}}/%(program_name)s.log
 # max # logfile bytes b4 rotation (default 50MB)
 stdout_logfile_maxbytes = 10MB
 # # of stdout logfile backups (default 10)
@@ -47,7 +47,7 @@ stdout_logfile_backups = 3
 # emit events on stdout writes (default false)
 stdout_events_enabled = false
 # stderr log path, NONE for none# default AUTO
-stderr_logfile = /var/log/noc/%(program_name)s.err
+stderr_logfile = {{noc_logs}}/%(program_name)s.err
 # max # logfile bytes b4 rotation (default 50MB)
 stderr_logfile_maxbytes = 1MB
 # # of stderr logfile backups (default 10)
