--- a/ansible/roles/node/templates/etc/services/web.conf
+++ b/ansible/roles/node/templates/etc/services/web.conf
@@ -1,9 +1,9 @@
 ##
-## NOC ping
+## Legacy noc-sae config
 ##
-[program:ping]
+[program:web]
 # the program (relative uses PATH, can take args)
-command = ./services/ping/service.py --instance=%(process_num)d
+command = ./services/web/service.py --instance=%(process_num)d
 # process_name expr (default %(program_name)s)
 process_name = %(program_name)s-%(process_num)02d
 # number of processes copies to start (def 1)
@@ -13,13 +13,13 @@ numprocs = 1
 # umask for process (default None)
 umask = 022
 # the relative start priority (default 999)
-priority = 90
+priority = 50
 # start at supervisord start
 autostart = false
 # whether/when to restart (default: unexpected)
 autorestart = unexpected
 # number of secs prog must stay running (def. 1)
-startsecs = 1
+startsecs = 2
 # max # of serial start failures (default 3)
 startretries = 999
 # 'expected' exit codes for process (default 0,2)
@@ -33,11 +33,11 @@ stopasgroup = false
 # SIGKILL the UNIX process group (def false)
 killasgroup = true
 # setuid to this UNIX account to run the program
-user = root
+user = %(ENV_NOC_USER)s
 # redirect proc stderr to stdout (default false)
 redirect_stderr = true
 # stdout log path, NONE for none# default AUTO
-stdout_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.log
+stdout_logfile = {{noc_logs}}/%(program_name)s-%(process_num)02d.log
 # max # logfile bytes b4 rotation (default 50MB)
 stdout_logfile_maxbytes = 10MB
 # # of stdout logfile backups (default 10)
@@ -47,7 +47,7 @@ stdout_logfile_backups = 3
 # emit events on stdout writes (default false)
 stdout_events_enabled = false
 # stderr log path, NONE for none# default AUTO
-stderr_logfile = /var/log/noc/%(program_name)s-%(process_num)02d.err
+stderr_logfile = {{noc_logs}}/%(program_name)s-%(process_num)02d.err
 # max # logfile bytes b4 rotation (default 50MB)
 stderr_logfile_maxbytes = 1MB
 # # of stderr logfile backups (default 10)
