use default path for grafana install
--HG--
branch : feature/microservices

--- a/ansible/roles/grafana/templates/grafana.ini
+++ b/ansible/roles/grafana/templates/grafana.ini
@@ -17,13 +17,13 @@ instance_name = ${HOSTNAME}
 [paths]
 # Path to where grafana can store temp files, sessions, and the sqlite3 db (if that is used)
 #
-data = {{ noc_root }}/var/db/grafana
+;data = {{ noc_root }}/var/db/grafana
 #
 # Directory where grafana can store logs
 #
 ;logs = /var/log/grafana
 
-plugins = {{ noc_root }}/var/db/grafana_plugins
+;plugins = {{ noc_root }}/var/db/grafana_plugins
 
 #################################### Server ####################################
 [server]
