--- a/ansible/roles/node/templates/etc/services/tgsender.conf
+++ b/ansible/roles/node/templates/etc/services/tgsender.conf
@@ -33,7 +33,7 @@ stopasgroup = false
 # SIGKILL the UNIX process group (def false)
 killasgroup = true
 # setuid to this UNIX account to run the program
-user = %(ENV_NOC_USER)s
+user = {{noc_user}}
 # redirect proc stderr to stdout (default false)
 redirect_stderr = true
 # stdout log path, NONE for none# default AUTO
