patch supervisord for oom_score_adj tune. linux only. prod only.
--HG--
branch : feature/microservices

--- a/ansible/roles/node/templates/etc/services/mrt.conf
+++ b/ansible/roles/node/templates/etc/services/mrt.conf
@@ -14,6 +14,7 @@ numprocs = 1
 umask = 022
 # the relative start priority (default 999)
 priority = 110
+oom_score_adj = 100
 # start at supervisord start
 autostart = false
 # whether/when to restart (default: unexpected)
