--- a/ansible/roles/node/templates/etc/services/escalator.conf
+++ b/ansible/roles/node/templates/etc/services/escalator.conf
@@ -14,6 +14,7 @@ numprocs = 1
 umask = 022
 # the relative start priority (default 999)
 priority = 50
+oom_score_adj = -200
 # start at supervisord start
 autostart = false
 # whether/when to restart (default: unexpected)
