--- a/ansible/roles/node/templates/etc/services/sync.conf
+++ b/ansible/roles/node/templates/etc/services/sync.conf
@@ -14,6 +14,7 @@ numprocs = 1
 umask = 022
 # the relative start priority (default 999)
 priority = 100
+oom_score_adj = 100
 # start at supervisord start
 autostart = false
 # whether/when to restart (default: unexpected)
