remove unneded path mappings
--HG--
branch : feature/microservices

--- a/ansible/roles/grafana/templates/grafana.ini
+++ b/ansible/roles/grafana/templates/grafana.ini
@@ -348,8 +348,7 @@ templates_pattern = emails/*.html
 #################################### Dashboard JSON files ################
 [dashboards.json]
 enabled = true
-;path = /var/lib/grafana/dashboards
-path = {{ noc_root }}/var/db/grafana_dashboards
+path = /var/lib/grafana/dashboards
 
 #################################### Alerting ######################################
 [alerting]
