--- a/collections/fm.eventclassificationrules/Arista/EOS/Config/Config_Changed_SYSLOG_.json
+++ b/collections/fm.eventclassificationrules/Arista/EOS/Config/Config_Changed_SYSLOG_.json
@@ -1,5 +1,6 @@
 {
     "name": "Arista | EOS | Config | Config Changed (SYSLOG)",
+    "$collection": "fm.eventclassificationrules",
     "uuid": "c4cde40b-8157-46f0-8b4e-9c229eff4010",
     "description": "May 15 20:10:49 arista1 Cli: %SYS-5-CONFIG_I: Configured from console by user on vty3 (10.1.4.14)",
     "event_class__name": "Config | Config Changed",
