--- a/collections/fm.eventclassificationrules/Arista/EOS/Config/Entering_Configuration_Mode_SYSLOG_.json
+++ b/collections/fm.eventclassificationrules/Arista/EOS/Config/Entering_Configuration_Mode_SYSLOG_.json
@@ -1,5 +1,6 @@
 {
     "name": "Arista | EOS | Config | Entering Configuration Mode (SYSLOG)",
+    "$collection": "fm.eventclassificationrules",
     "uuid": "53e69d8f-6c17-4267-b74b-52223ce671e0",
     "description": "SYSLOG: May 15 20:09:35 arista1 Cli: %SYS-5-CONFIG_E: Enter configuration mode from console by user on vty3 (10.1.4.14)",
     "event_class__name": "Config | Entering Configuration Mode",
