fix grafana install for freebsd
--HG--
branch : feature/microservices

--- a/ansible/roles/grafana/templates/grafana.ini
+++ b/ansible/roles/grafana/templates/grafana.ini
@@ -17,13 +17,11 @@ instance_name = ${HOSTNAME}
 [paths]
 # Path to where grafana can store temp files, sessions, and the sqlite3 db (if that is used)
 #
-;data = {{ noc_root }}/var/db/grafana
 #
 # Directory where grafana can store logs
 #
 ;logs = /var/log/grafana
 
-;plugins = {{ noc_root }}/var/db/grafana_plugins
 
 #################################### Server ####################################
 [server]
@@ -285,8 +283,8 @@ whitelist =
 #################################### Auth LDAP ###########################
 [auth.ldap]
 enabled = false
-config_file = /etc/grafana/ldap.toml
-allow_sign_up = true
+;config_file = /etc/grafana/ldap.toml
+;allow_sign_up = true
 
 #################################### SMTP / Emailing #####################
 [smtp]
@@ -348,7 +346,7 @@ templates_pattern = emails/*.html
 #################################### Dashboard JSON files ################
 [dashboards.json]
 enabled = true
-path = /var/lib/grafana/dashboards
+path = {{grafana_dashboard_dir}}
 
 #################################### Alerting ######################################
 [alerting]
