fix grafana role for freebsd. install ch datasource plugin
--HG--
branch : feature/microservices

--- a/ansible/roles/grafana/templates/grafana.ini
+++ b/ansible/roles/grafana/templates/grafana.ini
@@ -22,6 +22,7 @@ instance_name = ${HOSTNAME}
 #
 ;logs = /var/log/grafana
 
+plugins = {{grafana_plugins_dir}}
 
 #################################### Server ####################################
 [server]
