--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "collections",
+    "name": "collections-chmetrics",
     "version": "latest",
-    "dst_prefix": "collections",
+    "dst_prefix": "collections-chmetrics",
     "src_prefix": "",
     "files": [
        "**"
