--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ stages:
 
 test:empty:
   stage: test
-  image: registry.getnoc.com/noc/noc-docker:dev
+  image: registry.getnoc.com/noc/nocmc:dev 
   variables:
     NOC_PG_DB: noc
     NOC_PG_USER: noc
@@ -32,7 +32,7 @@ test:empty:
 
 test:with data:
   stage: test
-  image: registry.getnoc.com/noc/noc-docker:dev
+  image: registry.getnoc.com/noc/nocmc:dev
   variables:
     NOC_PG_DB: noc
     NOC_PG_USER: noc
