--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,13 @@ test:empty:
     NOC_PG_USER: noc
     NOC_PG_PASSWORD: noc
   services:
-    - registry.getnoc.com/infrastructure/postgres:master
-    - registry.getnoc.com/infrastructure/mongo:master
+    - name: registry.getnoc.com/infrastructure/postgres:master
+      alias: postgres 
+    - name: registry.getnoc.com/infrastructure/mongo:master
+      alias: mongo
   script:
-    - export NOC_PG_ADDRESSES=$(env | grep REGISTRY.GETNOC.COM_INFRASTRUCTURE_POSTGRES_PORT_5432_TCP_ADDR | awk -F '=' '{print $2}')
-    - export NOC_MONGO_ADDRESSES=$(env | grep REGISTRY.GETNOC.COM_INFRASTRUCTURE_MONGO_PORT_27017_TCP_ADDR | awk -F '=' '{print $2}')
+    - export NOC_PG_ADDRESSES=postgres:5432
+    - export NOC_MONGO_ADDRESSES=mongo:27017
     - env | sort 
     - mkdir /opt/noc/collections
     - mv src/* /opt/noc/collections
