--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,9 +21,8 @@ test:empty:
     - name: registry.getnoc.com/infrastructure/mongo:master
       alias: mongo
   script:
-    - export NOC_PG_ADDRESSES=postgres:5432
-    - export NOC_MONGO_ADDRESSES=mongo:27017
-    - env | sort 
+    - export NOC_PG_ADDRESSES=registry.getnoc.com-infrastructure-postgres:5432
+    - export NOC_MONGO_ADDRESSES=registry.getnoc.com-infrastructure-mongo:27017
     - mkdir /opt/noc/collections
     - mv src/* /opt/noc/collections
     - ls /opt/noc/collections
