--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ test:empty:
     - mv src/* /opt/noc/collections
     - ls /opt/noc/collections
     - cd /opt/noc
+    - python manage.py syncdb
     - python manage.py migrate
     - python commands/collection.py sync
   tags:
