--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ stages:
 
 test:empty:
   stage: test
-  image: registry.getnoc.com/noc/nocmc/feature_moversion:dev
+  image: registry.getnoc.com/noc/nocmc/feature_microservices:dev
   variables:
     NOC_PG_DB: noc
     NOC_PG_USER: noc
@@ -35,7 +35,7 @@ test:empty:
 
 test:with data:
   stage: test
-  image: registry.getnoc.com/noc/nocmc/feature_moversion:dev
+  image: registry.getnoc.com/noc/nocmc/feature_microservices:dev
   variables:
     NOC_PG_DB: noc
     NOC_PG_USER: noc
@@ -63,7 +63,7 @@ build:
   script:
     - mkdir -p dist 
     - ./build.py package.json
-    - echo ${CI_BUILD_REF} > dist/collections-moversion.latest
+    - echo ${CI_BUILD_REF} > dist/collections.latest
   tags:
     - docker
   artifacts:
