--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,18 @@ job1:
   stage: build
   image: registry.getnoc.com/noc/nocmc/microservices:build
   variables:
+    NOC_PG_DB: noc
+    NOC_PG_USER: noc
+    NOC_PG_PASSWORD: noc
     BRANCH: microservices
+  services:
+    - name: registry.getnoc.com/infrastructure/postgres:dev
+      alias: postgres
+    - name: registry.getnoc.com/infrastructure/mongo:dev
+      alias: mongo
+  before_script:
+    - export NOC_PG_ADDRESSES=registry.getnoc.com-infrastructure-postgres:5432
+    - export NOC_MONGO_ADDRESSES=registry.getnoc.com-infrastructure-mongo:27017
   script:
     - env | sort
     - mkdir -p /opt/noc
@@ -16,5 +27,6 @@ job1:
 #    - python ./scripts/deploy/install-packages requirements/card.json
 #    - python ./scripts/deploy/install-packages requirements/bi.json
     - /usr/bin/cythonize -i speedup/*.pyx
+    - python manage.py migrate
   tags:
     - docker
