do not use /opt/noc path

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,12 +21,10 @@ job1:
   script:
     - env | sort
     - mkdir -p /opt/noc
-    - cp -r $PWD/ /opt/noc
-    - cd /opt/noc
 #    - python ./scripts/deploy/install-packages requirements/web.json
 #    - python ./scripts/deploy/install-packages requirements/card.json
 #    - python ./scripts/deploy/install-packages requirements/bi.json
     - /usr/bin/cythonize -i speedup/*.pyx
-    - python manage.py migrate
+    - python ./manage.py migrate
   tags:
     - docker
