--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ job_lint:
   before_script:
     - apk add --update git
   script:
-    - flake8 $(git --no-pager diff --pretty="" --name-only microservices --)
+    - flake8 $(git --no-pager diff --name-only $(git rev-parse --abbrev-ref HEAD) $(git merge-base origin/HEAD HEAD))
   tags:
     - docker
 
