expand gitignore to ignore pypy directories

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ speedup/*.so
 ui/bi/**
 ui/bi2/**
 collections/
+include/ # pypy
+lib/*.so #pypy
+lib-python/ #pypy
+lib_pypy/ #pypy
+site-packages/ #pypy
+lib/tcl/ #pypy
+lib/tk/ #pypy
